Add services section

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 		<main class="main-home-page">
 			@@include('templates/sections/home/slider/index.html') @@include('templates/sections/home/calculation_order/index.html')
 			@@include('templates/sections/home/prospects/index.html') @@include('templates/sections/home/delivery_options/index.html')
+			@@include('templates/sections/home/our_services/index.html')
 		</main>
 		<footer class="footer">@@include('templates/layout/footer.html')</footer>
 		@@include('templates/layout/scripts.html')
