--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 			@@include('templates/sections/home/slider/index.html') @@include('templates/sections/home/calculation_order/index.html')
 			@@include('templates/sections/home/prospects/index.html') @@include('templates/sections/home/delivery_options/index.html')
 			@@include('templates/sections/home/our_services/index.html') @@include('templates/sections/home/about_company/index.html')
-			@@include('templates/sections/home/usually_questions/index.html')
+			@@include('templates/sections/home/usually_questions/index.html') @@include('templates/sections/home/ready_for_cooperation/index.html')
 		</main>
 		<footer class="footer">@@include('templates/layout/footer.html')</footer>
 		@@include('templates/layout/scripts.html')
